--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+html {
+	font-family: Arial;
+	font-size: 16px;
+	background: #5e42a6;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sidebar {
+	position: fixed;
+	width: 25%;
+	height: 100vh;
+	background: #312450;
+	font-size: 0.65em;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav {
+	position: relative;
+	margin: 0 15%;
+	text-align: right;
+	top: 50%;
+	transform: translateY(-50%);
+	font-weight: bold;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav ul {
+	list-style: none;
 }
-
-.App-link {
-  color: #61dafb;
+.nav ul li {
+	position: relative;
+	margin: 3.2em 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav ul li a {
+	line-height: 5em;
+	text-transform: uppercase;
+	text-decoration: none;
+	letter-spacing: 0.4em;
+	color: rgba(255, 255, 255, 0.35);
+	display: block;
+	transition: all ease-out 300ms;
+}
+.nav ul li.active a {
+	color: white;
+}
+.nav ul li:not(.active)::after {
+	opacity: 0.2;
+}
+.nav ul li:not(.active):hover a {
+	color: rgba(255, 255, 255, 0.75);
+}
+.nav ul li::after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 0.2em;
+	background: black;
+	left: 0;
+	bottom: 0;
+	background-image: linear-gradient(to right, #5e42a6, #b74e91);
+}
+.twitter {
+	position: relative;
+	width: 75%;
+	float: right;
+	height: 100vh;
+}
+.twitter .container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+}
+.twitter a {
+	position: relative;
+}
+.twitter a img {
+	width: 48px;
+	height: 48px;
+}
+.twitter p {
+	text-transform: uppercase;
+	font-size: 1em;
+	letter-spacing: 0.1em;
+	color: #fff;
+	font-weight: bold;
+	margin-top: 20px;
 }
