--- a/client/src/App.css
+++ b/client/src/App.css
@@ -78,7 +78,31 @@ html {
 	text-transform: uppercase;
 	font-size: 1em;
 	letter-spacing: 0.1em;
+	color: "black";
+	font-weight: bold;
+	margin-top: 20px;
+}
+
+.display h5 {
+	font-size: 1em;
+	letter-spacing: 0.1em;
+	color: black;
+	font-weight: bold;
+	margin-top: 20px;
+}
+
+.display h1 {
+	font-size: 1.5em;
+	letter-spacing: 0.1em;
 	color: #fff;
 	font-weight: bold;
 	margin-top: 20px;
+}
+
+.test {
+	background-color: "red";
+}
+
+.MuiInputBase-input {
+	color: red;
 }
