--- a/client/src/App.css
+++ b/client/src/App.css
@@ -122,3 +122,23 @@ html {
 .MuiInputBase-input {
 	color: red;
 }
+
+.SearchBar {
+	position: absolute;
+	top: 30%;
+	width: 100%;
+	z-index: 3;
+}
+
+@media screen and (max-width: 1000px) {
+	.SearchBar {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		z-index: 3;
+	}
+}
+
+.test {
+	background-color: #1c152e;
+}
